--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -68,6 +68,15 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            # Tag with branch name (e.g., 'main')
+            type=ref,event=branch
+            # Tag with git tag (e.g., v1.2.3 -> 1.2.3)
+            type=semver,pattern={{version}}
+            # Tag with major.minor (e.g., v1.2.3 -> 1.2)
+            type=semver,pattern={{major}}.{{minor}}
+            # Tag with 'latest' ONLY if we are pushing a tag (like v1.0.0)
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
