--- a/kubernetes/pvc-test.yaml
+++ b/kubernetes/pvc-test.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: test-dynamic-claim
+  namespace:
 spec:
   accessModes:
     - ReadWriteMany  # The superpower of NFS
