--- a/charts/nfs-server-bci/Chart.yaml
+++ b/charts/nfs-server-bci/Chart.yaml
@@ -7,7 +7,7 @@ sources:
   - https://github.com/doccaz/nfs-server-bci
   - https://github.com/doccaz/nfs-server-bci/tree/main/src
 type: application
-version: 1.0.5
+version: 1.0.5-1
 appVersion: "16.0-20260206"
 keywords:
   - nfs
@@ -15,7 +15,7 @@ keywords:
   - storage
   - csi
   - suse
-  
+
 maintainers:
   - name: Erico Mendonca
     email: erico.mendonca@suse.com
